--- a/javaScript高级程序设计笔记/ECMAScript/数据类型.md
+++ b/javaScript高级程序设计笔记/ECMAScript/数据类型.md
@@ -43,6 +43,83 @@ Null 类型也只有一个值，即特殊值 null。
 
 实际上,undefined值时派生自 null 值的,因此`null == undefined`会返回`true`。
 
+## Boolean 类型
 
+Boolean 类型只有俩个字面值：true 和 false。
+
+ECMAScript 中所有类型的值都有与这个俩个 Boolean 值等价的值。调用 Boolean() 函数可将其它类型值转化为 Boolean 值。
+
+| 数据类型  |  true | false |
+|--------:|:-------:|:-------:|
+| String | 非空字符串 | 空字符串 |
+| Number | 非零数字值 | 0 和 NaN |
+| Object | 任何对象  | null |
+| Undefined |  n/a (not applicable ) | undefined | 
+
+## Number 类型
+Number 类型使用 IEEE754 格式来表示整数和浮点数值（也称为双精度数值）。
+
+不同进制所对应的数值字面量格式：
+
+- 十进制：
+
+	直接在输入数字即可。
+	
+- 八进制：
+
+	第一位必须是（ 0 ）,然后是八进制数字序列（ 0~7 ）。如果字面值中的数值超出了范围，那么改数值则被当作十进制进行解析。
+   
+- 十六进制：
+
+	十六进制字面值的前俩位必须是0x，后面跟16进制数值（ 0-9 和 A-F）,其中 A-F 可以大些也可以小写。
+	
+### 浮点数值
+
+包含一个小数点，且小数点后面必须有一个数字的数值就是浮点数值。
+
+**保存浮点数值所需要的内存空间是保存整数值的倆倍。**
+
+基于内存的考虑，ECMAScript 会尽可能地把浮点数值（比如：1.0、1.）转化为正数值
+
+浮点数的最高精度是17位小数，但在进行算数计算时其精度远远不如整数。
+
+例如：
+0.1 + 0.2 = 0.30000000000000004
+
+### 数值范围
+
+**Number.MIN_VALUE**: 保存ECMAScript所能表示的最小数值(在大多数浏览器中这个值是5e-324）
+
+**Number.MAX_VALUE**: 保存ECMAScript所能表示的最大数值（在大多数浏览器中这个值是1.7976931348623157e+308）
+
+如果一个值超出 JavaScript 数值范围的值, 那么这个数值将被自动转换为特殊的 Infinity 值，即正负无穷大。`Infinity` 不能参与计算。
+
+### NaN
+NaN, 即非数值（ Not a Number ）是一个特殊的值，它有俩个特点：  
+
+- 任何涉及 NaN 的操作都会返回NaN
+- NaN 与任何值不相等
+
+**isNaN()函数**
+
+判断参数是否“不是数值”，在判断之前会对参数进行数值转换。
+
+### 数值转换
+
+ECMAScript提供了以下函数把非数值转换为数值
+
+1. Number() 
+
+	转换为数值，可以用于**任何数据类型**
+	
+2. parseInt()  
+
+	转换为整数，只能用于**String类型**
+	
+3. parseFloat()
+
+	转换为浮点数，只能用于**String类型**
+	
+##  String 类型
 
 
