--- a/javaScript高级程序设计笔记/ECMAScript/数据类型.md
+++ b/javaScript高级程序设计笔记/ECMAScript/数据类型.md
@@ -122,4 +122,8 @@ ECMAScript提供了以下函数把非数值转换为数值
 	
 ##  String 类型
 
+即字符串，由0个或多个16位Unicode字符组成的字符序列。
 
+### 字符字面量
+
+String 数据类型包含一些特殊的字符字面量，也叫转义序列／转义字符／非打印字符。它指的是 ECMAScript 不会将它们直接输出，而是经过转义后再输出。
