修改 目录结构

--- a/javaScript高级程序设计笔记/ECMAScript/三、数据类型/基本类型/基本数据类型.md
+++ b/javaScript高级程序设计笔记/ECMAScript/三、数据类型/基本类型/基本数据类型.md
@@ -1,30 +1,4 @@
-# 数据类型
-
-ECMAScript 一共有6种数据类型：其中包括 5 种简单数据类型（也称基本数据类型）和 1 种复杂数据类型（也称引用数据类型）：
-
-- Undefined 
-- Null 
-- Boolean 
-- Number   
-- String
-- Object
-
-
-ECMAScript 提供了 typeof 工具来检测数据类型,它是一个操作符而不是函数，所以括号并不必需。typeof会返回以下类型值：
-
-- undefined 
-- boolean 
-- number   
-- string
-- object
-- function
-
-**注意：**
-
-1. 调用typeof null会返回"object", 因为特殊值null被认为是一个空对象的引用。
-
-
-2. 函数在 ECMAScript 中是对象，而不是一种数据类型。但因其特殊性，存在了利用 typeof 操作符来区分函数和其他对象的必要性。
+# 基本数据类型
 
 ## undefined 类型
 Undefined类型只有一个值，即特殊的undefined。
@@ -124,6 +98,30 @@ ECMAScript提供了以下函数把非数值转换为数值
 
 即字符串，由0个或多个16位Unicode字符组成的字符序列。
 
-### 字符字面量
 
-String 数据类型包含一些特殊的字符字面量，也叫转义序列／转义字符／非打印字符。它指的是 ECMAScript 不会将它们直接输出，而是经过转义后再输出。
+
+1. 字符字面量
+
+    String 数据类型包含一些特殊的字符字面量，也叫转义序列／转义字符／非打印字符。它指的是 ECMAScript 不会将它们直接输出，而是经过转义后再输出。
+
+    例如：
+
+
+    | 字面量         | 含义          |
+    | :-----------: |:------------:|
+    | \n            | 换行          |
+    | \b            | 空格          |
+    | \r            | 回车          |
+    | `\'`          | 单引号        |
+    | `\" `         | 双引号        |
+    | \t            | 制表          |
+
+
+    字符字面量可以出现在字符串中的任意位置，并且会被当做**一个**字符来解析。即，无论这个字面量多长，它的length永远都是1。
+
+2. toString(进制) 和 String()
+
+   - toString 方法返回相应值的字符串表现，可以传入进制参数，默认以十进制格式输出。除了`null`和`undefined`，其他数据类型基本都有这个方法。
+
+   - String 方法可以对任何值使用，包括`null`和`undifined`。它的内在机制是：针对`null`和`undifed`会返回其本身，针对其它则会调用 toString 方法。
+
