--- a/javaScript高级程序设计笔记/ECMAScript/一、语法/语法.md
+++ b/javaScript高级程序设计笔记/ECMAScript/一、语法/语法.md
@@ -1,13 +1,166 @@
 # 语法
 
-### 区分大小写
+## 区分大小写
 
 ECMAScript的一切（变量、函数名、操作符）都区分大小写。
 
-### 标识符
+## 标识符
+
+> 标识符是指变量、函数、属性的名字，或者函数的参数。
+
+组合规则：
+
+- 首字符必须是字母、下划线或者$
+- 其他字符可以是字母、下划线、$和数字
+
+## 注释
+
+单行注释
+
+```
+// 单行注释
+```
+
+多行注释
+
+```
+/*
+多行注释
+*/
+```
+
+## 严格模式
+
+ES5 引入了严格模式,严格模式对ES3的一些不确定行为进行了处理，并且对某些不安全的操作也抛出了错误。
 
 
-### 注释符
+使用严格模式：
+
+```
+"use strict"
+```
+
+## 关键字和保留字（不能用于标识符）
 
 
-### 语句
+**关键字**
+
+ break
+
+ case
+
+ catch
+
+ continue
+
+ debugger（第五版）
+
+ default
+
+ delete
+
+ do
+
+ else
+
+ finally
+
+ for
+
+ function
+
+ if
+
+ in
+
+ typeof
+
+ var
+
+ void
+
+ while
+
+ with
+
+ instanceof
+
+ return
+
+ new
+
+ switch
+
+ this
+
+ throw
+
+ try
+
+ **保留字**
+
+ abstract
+
+ boolean
+
+ byte
+
+ char
+
+ class
+
+ const
+
+ debugger
+
+ double
+
+ enum
+
+ export
+
+ extends
+
+ final
+
+ float
+
+ goto
+
+ implements
+
+ import
+
+ int
+
+ interface
+
+ long
+
+ native
+
+ package
+
+ private
+
+ protected
+
+ public
+
+ short
+
+ static
+
+ super
+
+ synchronized
+
+ throws
+
+ transient
+
+ volatile
+
+ let （第五版）
+
+ yield  （第五版）
